update parent & use wildfly checkstyle